Fix sst target configs